# serializer version: 1
# name: test_number_update[number.keuken_alle_maximum_rotation]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by WMS WebControl pro API',
      'friendly_name': 'Keuken alle Maximum Rotation',
      'max': 127,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1.0,
    }),
    'context': <ANY>,
    'entity_id': 'number.keuken_alle_maximum_rotation',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '75',
  })
# ---
# name: test_number_update[number.keuken_alle_minimum_rotation]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by WMS WebControl pro API',
      'friendly_name': 'Keuken alle Minimum Rotation',
      'max': 0,
      'min': -127,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1.0,
    }),
    'context': <ANY>,
    'entity_id': 'number.keuken_alle_minimum_rotation',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '-75',
  })
# ---
# name: test_number_update[number.keuken_alle_rotation]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by WMS WebControl pro API',
      'friendly_name': 'Keuken alle Rotation',
      'max': 127,
      'min': -127,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1.0,
    }),
    'context': <ANY>,
    'entity_id': 'number.keuken_alle_rotation',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '127',
  })
# ---
